스크롤 내려보기

--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -669,26 +669,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "54"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(articles)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 87,
    "metadata": {},
    "outputs": [
@@ -804,11 +784,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 🛍️ 네이버 쇼핑몰"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "url = \"https://search.shopping.naver.com/search/all?query=노트북\"\n",
+    "driver = Edge()\n",
+    "driver.get(url)\n",
+    "driver.maximize_window()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ⤵️ 스크롤 내려보기\n",
+    "페이지 전체를 로드하기 위해 스크롤을 내리는 방법을 쓸 수 있습니다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "\n",
+    "driver.refresh()\n",
+    "\n",
+    "# 무한스크롤\n",
+    "# 페이지의 스크롤 높이 받아오기\n",
+    "last_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    "\n",
+    "while True:\n",
+    "    # 스크롤 끝까지 내리기\n",
+    "    driver.execute_script(\"window.scrollTo(0,document.body.scrollHeight)\")\n",
+    " \n",
+    "    # 현재 스크롤 위치 받아오기\n",
+    "    current_height = driver.execute_script(\"return document.body.scrollHeight\")\n",
+    " \n",
+    "    # 마지막스크롤 = 현재스크롤이면 반복 벗어나기  \n",
+    "    if last_height == current_height: break\n",
+    " \n",
+    "    # 현재 스크롤을 마지막 스크롤로 업데이트 하기\n",
+    "    last_height = current_height\n",
+    "\n",
+    "    time.sleep(2.0)"
+   ]
   }
  ],
  "metadata": {
