--- a/browser/40_브라우저 제어하기_배포.ipynb
+++ b/browser/40_브라우저 제어하기_배포.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -586,54 +586,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "검색할 날짜(yyyy-MM-DD): 2025-01-29\n"
+      "검색할 날짜(yyyy-MM-DD): 2025-1-31\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "{'subject': '“6만전자 간다” vs “모든 악재는 충분히 반영”…삼성전자 보는 증권가 엇갈린 시선',\n",
-       " 'summary': '코스피 대장주 삼성전자의 주가 향방을 두고 증권가도 좀처럼 갈피를 잡지 못하는 모습이다. 삼성전자의 주가가 최근 크게 하락한 상황이지만.. 매일경제 | 2025-01-29 22:07:08',\n",
-       " 'press': '매일경제',\n",
-       " 'wdate': '2025-01-29 22:07:08',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/009/0005435793'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'subject': \"젊은 입맛 사로잡은 '우리쌀' 막걸리…역대 최소 쌀 소비 구원투수\",\n",
-       " 'summary': '매년 쌀 소비는 계속 줄어 지난해에도 역대 최저를 기록했죠. 남아도는 쌀 때문에 정부와 농가 모두 고민이 깊은데, 쌀로 만든 막걸리가 .. MBN | 2025-01-29 19:41:06',\n",
-       " 'press': 'MBN',\n",
-       " 'wdate': '2025-01-29 19:41:06',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/057/0001869087'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'subject': '\"안내방송 못 들어\"…에어부산 \"긴박한 순간, 절차 따랐다\"',\n",
-       " 'summary': '다행히 대형 참사는 막았지만, 당시 기내 승무원들의 대처는 논란이 되고 있습니다. 대피하라는 방송도 없었고 연기가 나온 직후엔 착석하라.. MBN | 2025-01-29 19:16:15',\n",
-       " 'press': 'MBN',\n",
-       " 'wdate': '2025-01-29 19:16:15',\n",
-       " 'link': 'https://n.news.naver.com/mnews/article/057/0001869076'}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "NoSuchWindowException",
+     "evalue": "Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: MicrosoftEdge=132.0.2957.127)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7E8FF0AF5+13637]\n\tMicrosoft::Applications::Events::EventProperty::empty [0x00007FF7E927BC04+2078868]\n\tMicrosoft::Applications::Events::EventProperty::empty [0x00007FF7E91D66E6+1401718]\n\t(No symbol) [0x00007FF7E8D47A27]\n\t(No symbol) [0x00007FF7E8DD39C5]\n\t(No symbol) [0x00007FF7E8DE83EA]\n\t(No symbol) [0x00007FF7E8DCDA33]\n\t(No symbol) [0x00007FF7E8DA32F4]\n\t(No symbol) [0x00007FF7E8DA2626]\n\t(No symbol) [0x00007FF7E8DA2EE1]\n\t(No symbol) [0x00007FF7E8E2E194]\n\t(No symbol) [0x00007FF7E8ED607F]\n\t(No symbol) [0x00007FF7E8E31B83]\n\tMicrosoft::Applications::Events::EventProperty::to_string [0x00007FF7E93381F9+269801]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F871B1+519377]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F824A4+499652]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F825E9+499977]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F77566+454790]\n\tBaseThreadInitThunk [0x00007FFDBED7E8D7+23]\n\tRtlUserThreadStart [0x00007FFDBFD9FBCC+44]\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNoSuchWindowException\u001b[0m                     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[118], line 16\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;66;03m# 페이지를 1씩 늘리면서 반복합니다.\u001b[39;00m\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m:\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;66;03m# 페이지가 포함된 url이 가리키는 페이지에 방문하고\u001b[39;00m\n\u001b[0;32m     14\u001b[0m     \u001b[38;5;66;03m# 그 페이지의 기사를 모두 스크랩 한 다음에\u001b[39;00m\n\u001b[0;32m     15\u001b[0m     \u001b[38;5;66;03m# 스크랩된 데이터를 articles의 뒤에 덧붙입니다.\u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m     articles\u001b[38;5;241m.\u001b[39mextend(\u001b[43mscrap_articles\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdriver\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;124;43mf\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m&page=\u001b[39;49m\u001b[38;5;132;43;01m{\u001b[39;49;00m\u001b[43mpage\u001b[49m\u001b[38;5;132;43;01m}\u001b[39;49;00m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;66;03m# 만약 [맨뒤] 버튼이 없다면 마지막 페이지이므로 반복문을 탈출합니다.\u001b[39;00m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n",
+      "Cell \u001b[1;32mIn[76], line 4\u001b[0m, in \u001b[0;36mscrap_articles\u001b[1;34m(driver, url)\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mscrap_articles\u001b[39m(driver, url):\n\u001b[1;32m----> 4\u001b[0m     \u001b[43mdriver\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m\u001b[43m(\u001b[49m\u001b[43murl\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     raw_articles \u001b[38;5;241m=\u001b[39m driver\u001b[38;5;241m.\u001b[39mfind_elements(By\u001b[38;5;241m.\u001b[39mCSS_SELECTOR, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.block1\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m     articles \u001b[38;5;241m=\u001b[39m []\n",
+      "File \u001b[1;32mg:\\zer0ken\\ms-ai-school\\.venv\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:356\u001b[0m, in \u001b[0;36mWebDriver.get\u001b[1;34m(self, url)\u001b[0m\n\u001b[0;32m    354\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget\u001b[39m(\u001b[38;5;28mself\u001b[39m, url: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    355\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Loads a web page in the current browser session.\"\"\"\u001b[39;00m\n\u001b[1;32m--> 356\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mCommand\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mGET\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m{\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43murl\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43murl\u001b[49m\u001b[43m}\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mg:\\zer0ken\\ms-ai-school\\.venv\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:347\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    345\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommand_executor\u001b[38;5;241m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    346\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m response:\n\u001b[1;32m--> 347\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43merror_handler\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck_response\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresponse\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    348\u001b[0m     response[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_unwrap_value(response\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;28;01mNone\u001b[39;00m))\n\u001b[0;32m    349\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\n",
+      "File \u001b[1;32mg:\\zer0ken\\ms-ai-school\\.venv\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:229\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    227\u001b[0m         alert_text \u001b[38;5;241m=\u001b[39m value[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124malert\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtext\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    228\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[38;5;66;03m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 229\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
+      "\u001b[1;31mNoSuchWindowException\u001b[0m: Message: no such window: target window already closed\nfrom unknown error: web view not found\n  (Session info: MicrosoftEdge=132.0.2957.127)\nStacktrace:\n\tGetHandleVerifier [0x00007FF7E8FF0AF5+13637]\n\tMicrosoft::Applications::Events::EventProperty::empty [0x00007FF7E927BC04+2078868]\n\tMicrosoft::Applications::Events::EventProperty::empty [0x00007FF7E91D66E6+1401718]\n\t(No symbol) [0x00007FF7E8D47A27]\n\t(No symbol) [0x00007FF7E8DD39C5]\n\t(No symbol) [0x00007FF7E8DE83EA]\n\t(No symbol) [0x00007FF7E8DCDA33]\n\t(No symbol) [0x00007FF7E8DA32F4]\n\t(No symbol) [0x00007FF7E8DA2626]\n\t(No symbol) [0x00007FF7E8DA2EE1]\n\t(No symbol) [0x00007FF7E8E2E194]\n\t(No symbol) [0x00007FF7E8ED607F]\n\t(No symbol) [0x00007FF7E8E31B83]\n\tMicrosoft::Applications::Events::EventProperty::to_string [0x00007FF7E93381F9+269801]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F871B1+519377]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F824A4+499652]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F825E9+499977]\n\tMicrosoft::Applications::Events::ILogConfiguration::operator* [0x00007FF7E8F77566+454790]\n\tBaseThreadInitThunk [0x00007FFDBED7E8D7+23]\n\tRtlUserThreadStart [0x00007FFDBFD9FBCC+44]\n"
+     ]
     }
    ],
    "source": [
