--- a/basics/python-basics.ipynb
+++ b/basics/python-basics.ipynb
@@ -16,18 +16,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello python\n"
+     ]
+    }
+   ],
    "source": [
     "print('hello python')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Python\n",
+      "홍길동 나이 = 20 세\n"
+     ]
+    }
+   ],
    "source": [
     "print('Hello')\n",
     "print('Python')\n",
@@ -36,9 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "0\n",
+      "9\n",
+      "1.0\n",
+      "1\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "## 미션1\n",
     "\n",
@@ -55,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n"
+     ]
+    }
+   ],
    "source": [
     "n = 1234\n",
     "\n",
@@ -71,9 +110,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345600\n"
+     ]
+    }
+   ],
    "source": [
     "n = 12345678\n",
     "\n",
@@ -85,9 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "a = 1234\n",
     "b = 1\n",
@@ -99,9 +154,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a + b = 3\n"
+     ]
+    }
+   ],
    "source": [
     "a = int(input('a:'))\n",
     "b = int(input('b:'))\n",
@@ -110,9 +173,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area = 8.0\n"
+     ]
+    }
+   ],
    "source": [
     "base = int(input('base:'))\n",
     "height = int(input('height:'))\n",
@@ -121,9 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "가격: 18000원\n"
+     ]
+    }
+   ],
    "source": [
     "print('가격: ' + str(3000*int(input('::메뉴판:: 김밥: 3,000원 / 떡볶이: 3,500원 / 라면: 2,500원 ::김밥 주문량을 입력하세요: ')) + 3500*int(input('::메뉴판:: 김밥: 3,000원 / 떡볶이: 3,500원 / 라면: 2,500원 :: 떡볶이 주문량을 입력하세요: ')) + 2500*int(input('::메뉴판:: 김밥: 3,000원 / 떡볶이: 3,500원 / 라면: 2,500원 :: 라면 주문량을 입력하세요: '))) + '원')"
    ]
@@ -454,9 +533,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*\n",
+      "***\n",
+      "*****\n",
+      "*******\n",
+      "*********\n",
+      "***********\n",
+      "*************\n",
+      "***************\n",
+      "*****************\n",
+      "*******************\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 20, 2):\n",
     "    for j in range(i):\n",
@@ -466,9 +562,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*******************\n",
+      "*****************\n",
+      "***************\n",
+      "*************\n",
+      "***********\n",
+      "*********\n",
+      "*******\n",
+      "*****\n",
+      "***\n",
+      "*\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(19, 0, -2):\n",
     "    for j in range(i):\n",
@@ -478,9 +591,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         *\n",
+      "        **\n",
+      "       ***\n",
+      "      ****\n",
+      "     *****\n",
+      "    ******\n",
+      "   *******\n",
+      "  ********\n",
+      " *********\n",
+      "**********\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 11):\n",
     "    for j in range(10 - i):\n",
@@ -492,9 +622,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         *\n",
+      "        ***\n",
+      "       *****\n",
+      "      *******\n",
+      "     *********\n",
+      "    ***********\n",
+      "   *************\n",
+      "  ***************\n",
+      " *****************\n",
+      "*******************\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 11):\n",
     "    for j in range(10 - i):\n",
@@ -619,24 +766,6 @@
     "        print(f'땡: {word}')\n",
     "        break\n",
     "    last_word = word"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "커피는 10잔\n",
-    "가격은 300\n",
-    "\n",
-    "커피가 남아있는 동안:\n",
-    "    돈 입력\n",
-    "\n",
-    "    돈이 가격 이상이면:\n",
-    "        커피 팔아\n",
-    "        거스름돈 줘\n",
-    "    아니면:\n",
-    "        커피 안 팔아\n",
-    "        돈 돌려줘\n"
    ]
   },
   {
@@ -1287,18 +1416,11 @@
     "a = FourBasicOperator(1, 2)\n",
     "print(a.add())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
