--- a/neural-net/ch02 신경망/MNIST 손글씨 데이터셋.ipynb
+++ b/neural-net/ch02 신경망/MNIST 손글씨 데이터셋.ipynb
@@ -240,9 +240,9 @@
     "for batch, i in enumerate(range(0, len(x), batch_size)):\n",
     "    y = predict(network, x[i:i+batch_size])\n",
     "    pred = np.argmax(y, axis=1)\n",
+    "\n",
     "    batch_accurate = np.sum(pred == t[i:i+batch_size])\n",
-    "    \n",
-    "    accurate += batch_accurate\n",
+    "    accurate += np.sum(pred == t[i:i+batch_size])\n",
     "    inaccurate.extend(\n",
     "        list(zip(\n",
     "            map(int, np.arange(i, i + batch_size)[pred != t[i:i+batch_size]]),\n",
