--- a/neural-net/ch02 신경망/MNIST 손글씨 데이터셋.ipynb
+++ b/neural-net/ch02 신경망/MNIST 손글씨 데이터셋.ipynb
@@ -58,8 +58,8 @@
    "metadata": {},
    "source": [
     "### 🪧 공통 함수\n",
-    "- `get_data()`\n",
-    "  - 데이터셋에서 데이터를 불러옵니다.\n",
+    "- `show_img(img, label)`\n",
+    "  - 이미지를 표시합니다.\n",
     "- `init_network()`\n",
     "  - 가중치 정보를 불러옵니다.\n",
     "- `predict(network, x)`\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
       "Batch 3: 90 / 100 accurate\n",
       "Batch 4: 94 / 100 accurate\n",
       "...\n",
-      "정확도: 0.9352, 실행 시간: 0.0175초\n"
+      "정확도: 0.9352, 실행 시간: 0.0186초\n"
      ]
     }
    ],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [
     {
