논리 게이트

--- a/neural-net/ch01 퍼셉트론/논리 게이트.ipynb
+++ b/neural-net/ch01 퍼셉트론/논리 게이트.ipynb
@@ -121,7 +121,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 다층 퍼셉트론"
+    "### 🧵 다층 퍼셉트론\n",
+    "MLP; Multi-Layer Perceptron."
    ]
   },
   {
