다변수 미분

--- a/neural-net/ch03 신경망 학습/수치미분.ipynb
+++ b/neural-net/ch03 신경망 학습/수치미분.ipynb
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,15 +154,14 @@
     "        \n",
     "        x[i] = float(tmp) + h\n",
     "        fxh1 = f(x)\n",
-    "        \n",
     "        x[i] = tmp - h\n",
     "        fxh2 = f(x)\n",
-    "        \n",
     "        grad[i] = (fxh1 - fxh2) / (2 * h)\n",
     "        \n",
     "        x[i] = tmp\n",
     "\n",
     "    return grad\n",
+    "\n",
     "\n",
     "def numerical_gradient(f, x):\n",
     "    if x.ndim == 1:\n",
@@ -184,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -236,8 +235,17 @@
     "plt.quiver(X, Y, -grad[0], -grad[1], angles='xy', color='white')\n",
     "plt.xlabel('x0')\n",
     "plt.ylabel('x1')\n",
+    "# plt.grid()\n",
+    "# plt.axis('off)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
