신경망 경사 하강

--- a/neural-net/ch03 신경망 학습/경사 하강법.ipynb
+++ b/neural-net/ch03 신경망 학습/경사 하강법.ipynb
@@ -16,10 +16,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "현재 작업 디렉토리: \"g:\\zer0ken\\ms-ai-school\\neural-net\\ch03 신경망 학습\"\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "import sys\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -29,7 +39,14 @@
     "# 한글폰트 설정\n",
     "import matplotlib as mpl\n",
     "mpl.rc('font', family='D2Coding')\n",
-    "mpl.rcParams['axes.unicode_minus'] = False"
+    "mpl.rcParams['axes.unicode_minus'] = False\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "parent_dir = os.path.dirname(current_dir)\n",
+    "sys.path.append(parent_dir)\n",
+    "print(f'현재 작업 디렉토리: \"{os.getcwd()}\"')\n",
+    "\n",
+    "from common.functions import *"
    ]
   },
   {
@@ -41,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +69,7 @@
     "    for i in range(x.size):\n",
     "        tmp = x[i]\n",
     "        \n",
-    "        x[i] = float(tmp) + h\n",
+    "        x[i] = tmp + h\n",
     "        fxh1 = f(x)\n",
     "        x[i] = tmp - h\n",
     "        fxh2 = f(x)\n",
@@ -83,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +120,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 🔬 임의의 함수에 대한 테스트"
+    "### 🔬 임의의 함수에 대한 경사 하강"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -149,6 +166,53 @@
     "plt.ylabel('x1')\n",
     "plt.title('변수 (x0, x1)에 경사 하강법을 적용한 결과')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🧵 신경망의 가중치에 대한 경사 하강"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.24078918  0.22688553 -0.46767471]\n",
+      " [ 0.36118378  0.34032829 -0.70151207]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "class SimpleNet:\n",
+    "    def __init__(self):\n",
+    "        self.W = np.random.randn(2, 3)\n",
+    "    \n",
+    "    def predict(self, x):\n",
+    "        return np.dot(x, self.W)\n",
+    "\n",
+    "    def loss(self, x, t):\n",
+    "        z = self.predict(x)\n",
+    "        y = softmax(z)\n",
+    "        loss = cross_entropy_error(y, t)\n",
+    "        \n",
+    "        return loss\n",
+    "\n",
+    "x = np.array([0.6, 0.9])\n",
+    "t = np.array([0, 0, 1])\n",
+    "\n",
+    "net = SimpleNet()\n",
+    "\n",
+    "f = lambda w: net.loss(x, t)\n",
+    "dW = numerical_gradient(f, net.W)\n",
+    "\n",
+    "print(dW)"
    ]
   },
   {
