--- a/neural-net/ch03 신경망 학습/학습 알고리즘으로 TwoLayerNet 학습시키기.ipynb
+++ b/neural-net/ch03 신경망 학습/학습 알고리즘으로 TwoLayerNet 학습시키기.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 🔄️ 학습 알고리즘"
+    "# ✌️ 학습 알고리즘으로 TwoLayerNet 학습시키기"
    ]
   },
   {
