매개변수 기본값 제거

--- a/neural-net/ch05 학습 기술/가중치 초기화.ipynb
+++ b/neural-net/ch05 학습 기술/가중치 초기화.ipynb
@@ -192,8 +192,7 @@
     "1. 실험용 설정\n",
     "\"\"\"\n",
     "weight_init_strategies = {'std=0.01': 0.01, 'Xavier': 'sigmoid', 'He': 'relu'}\n",
-    "optimizer = SGD(lr=0.01)\n",
-    "\n",
+    "optimizer = SGD()\n",
     "networks = {}\n",
     "train_loss = {}\n",
     "for strategy, weight_type in weight_init_strategies.items():\n",
