변수명 수정 후 재실행

--- a/stone/ClassifySpaceRockCode.ipynb
+++ b/stone/ClassifySpaceRockCode.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -89,14 +89,14 @@
        ")"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 이미지 데이터를 ResNet50에서 다룰 수 있도록 변환시키는 방법을 정한다. (resnet50_transform)\n",
-    "resnet50_transform = transforms.Compose([\n",
+    "# 이미지 데이터를 ResNet50에서 다룰 수 있도록 변환시키는 방법을 정한다. (transform)\n",
+    "transform = transforms.Compose([\n",
     "    transforms.RandomResizedCrop(224),\n",
     "    transforms.Resize(224),\n",
     "    transforms.ToTensor()\n",
@@ -104,7 +104,7 @@
     "# convert image size to 224x224 for ResNet50 after crop\n",
     "\n",
     "# 설정한 이미지 데이터 변환 방법을 출력하여 확인한다.\n",
-    "resnet50_transform"
+    "transform"
    ]
   },
   {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "           )"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
    "source": [
     "# datasets.ImageFolder를 사용해서 학습 데이터(stone_dataset)를 만든다.\n",
     "# 이전에 정의한 데이터 변환이 적용된다. \n",
-    "dataset = datasets.ImageFolder(dataset_dir, transform=resnet50_transform)\n",
+    "dataset = datasets.ImageFolder(dataset_dir, transform=transform)\n",
     "\n",
     "# 데이터의 형식을 확인한다.\n",
     "dataset"
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -184,21 +184,21 @@
     {
      "data": {
       "text/plain": [
-       "array([  6, 139,  94,  65,  14,   2,   5,  59,  58,  41, 103,  50, 109,\n",
-       "         4, 117,  36,  78, 101,   7,  37,  57, 142, 132,   3,  71, 154,\n",
-       "        30,  99,  16, 112, 113,  70,  35,  33,  13,  80,  43, 118,  67,\n",
-       "        56,  86,  46,  44,  95,  15,  45,  18,  85, 141,  40, 138,  19,\n",
-       "       130,   9, 129,  51, 146,  79,  47,  92,  29,  20,  89, 134,   0,\n",
-       "         1, 147, 115,  27,  90,  87,  22,  97,  25,  32,  63,  88, 137,\n",
-       "        64,  42,  68,  81, 148,  39,  34, 119, 108, 104, 125,  60,  93,\n",
-       "        17,  53, 145,  31, 120,  98,  12,  66,  72,  10, 136, 100,  74,\n",
-       "        77, 135, 128, 140,  73, 124,  48, 106,  26, 152,  61,  96, 133,\n",
-       "       114, 153,  76, 122,  28, 121,  84,  49, 102,  82, 111, 150,  38,\n",
-       "        23, 127,  69, 123, 149, 151,  21, 110,  55,  62,  11, 105,   8,\n",
-       "       143, 126,  54, 131,  83,  52, 144, 116,  24, 107,  91,  75])"
+       "array([ 62,  90,  29,  35, 120, 124, 100,  19,  82, 101,  53,  88,  99,\n",
+       "       119, 140,   2,  55,  31, 130, 143, 151,  85, 153,  63,  30,  57,\n",
+       "       149, 148, 118,  74,  18,  28, 102,  23,  68,   3,  80,  77, 131,\n",
+       "        66, 115,  15,  96, 147, 136, 138, 121,  65, 126,  73,  45,  95,\n",
+       "        26,  81,  70,  41, 150,  72,  21,  20,  34,  51,  48,   9,  42,\n",
+       "       145,  87,   7, 141,  79,  43,  52, 110, 122,  67,  98,  69,  33,\n",
+       "       105,  12, 103,  76,  25, 106,  78, 146, 116,  94,  71, 112,   4,\n",
+       "        47,  46,  54,  17, 133, 117, 137,  11, 128, 144,  56,  37, 139,\n",
+       "       142,  40, 125,  93,   6,  89,  92, 113, 104, 108, 135,  32,   5,\n",
+       "        14,  24, 132,   8,  38, 109,  84, 134,  97,  86,   0, 129,  91,\n",
+       "        50, 111,  64, 114,  22,   1,  36,  60,  39,  83,  75,  27,  61,\n",
+       "       127,  13,  44,  59,  16, 123,  58, 107,  49,  10, 154, 152])"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -237,22 +237,22 @@
     {
      "data": {
       "text/plain": [
-       "(array([  6, 139,  94,  65,  14,   2,   5,  59,  58,  41, 103,  50, 109,\n",
-       "          4, 117,  36,  78, 101,   7,  37,  57, 142, 132,   3,  71, 154,\n",
-       "         30,  99,  16, 112, 113,  70,  35,  33,  13,  80,  43, 118,  67,\n",
-       "         56,  86,  46,  44,  95,  15,  45,  18,  85, 141,  40, 138,  19,\n",
-       "        130,   9, 129,  51, 146,  79,  47,  92,  29,  20,  89, 134,   0,\n",
-       "          1, 147, 115,  27,  90,  87,  22,  97,  25,  32,  63,  88, 137,\n",
-       "         64,  42,  68,  81, 148,  39,  34, 119, 108, 104, 125,  60,  93,\n",
-       "         17,  53, 145,  31, 120,  98,  12,  66,  72,  10, 136, 100,  74,\n",
-       "         77, 135, 128, 140,  73, 124,  48, 106,  26, 152,  61,  96, 133,\n",
-       "        114, 153,  76, 122,  28, 121,  84]),\n",
-       " array([ 49, 102,  82, 111, 150,  38,  23, 127,  69, 123, 149, 151,  21,\n",
-       "        110,  55,  62,  11, 105,   8, 143, 126,  54, 131,  83,  52, 144,\n",
-       "        116,  24, 107,  91,  75]))"
+       "(array([ 62,  90,  29,  35, 120, 124, 100,  19,  82, 101,  53,  88,  99,\n",
+       "        119, 140,   2,  55,  31, 130, 143, 151,  85, 153,  63,  30,  57,\n",
+       "        149, 148, 118,  74,  18,  28, 102,  23,  68,   3,  80,  77, 131,\n",
+       "         66, 115,  15,  96, 147, 136, 138, 121,  65, 126,  73,  45,  95,\n",
+       "         26,  81,  70,  41, 150,  72,  21,  20,  34,  51,  48,   9,  42,\n",
+       "        145,  87,   7, 141,  79,  43,  52, 110, 122,  67,  98,  69,  33,\n",
+       "        105,  12, 103,  76,  25, 106,  78, 146, 116,  94,  71, 112,   4,\n",
+       "         47,  46,  54,  17, 133, 117, 137,  11, 128, 144,  56,  37, 139,\n",
+       "        142,  40, 125,  93,   6,  89,  92, 113, 104, 108, 135,  32,   5,\n",
+       "         14,  24, 132,   8,  38, 109,  84]),\n",
+       " array([134,  97,  86,   0, 129,  91,  50, 111,  64, 114,  22,   1,  36,\n",
+       "         60,  39,  83,  75,  27,  61, 127,  13,  44,  59,  16, 123,  58,\n",
+       "        107,  49,  10, 154, 152]))"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,13 +313,13 @@
     "\n",
     "# 위의 코드들을 묶어서 load_split_train_test() 함수를 만든다. (입력 : 데이터 디렉토리, 분할 비율) (출력 : 학습 데이터 로더, 테스트 데이터 로더)\n",
     "def load_split_train_test(dataset_dir: str, train_ratio: float):\n",
-    "    resnet50_transform = transforms.Compose([\n",
+    "    transform = transforms.Compose([\n",
     "        transforms.RandomResizedCrop(224),\n",
     "        transforms.Resize(224),\n",
     "        transforms.ToTensor()\n",
     "    ])\n",
     "    \n",
-    "    dataset = datasets.ImageFolder(dataset_dir, transform=resnet50_transform)\n",
+    "    dataset = datasets.ImageFolder(dataset_dir, transform=transform)\n",
     "\n",
     "    dataset_size = len(dataset)\n",
     "    indices = np.arange(dataset_size)\n",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
