--- a/iris-gradio/iris-gradio.ipynb
+++ b/iris-gradio/iris-gradio.ipynb
@@ -168,14 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* Running on local URL:  http://127.0.0.1:7897\n",
+      "* Running on local URL:  http://127.0.0.1:7898\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -183,7 +183,7 @@
     {
      "data": {
       "text/html": [
-       "<div><iframe src=\"http://127.0.0.1:7897/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+       "<div><iframe src=\"http://127.0.0.1:7898/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -196,7 +196,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
     "    with gr.Row():\n",
     "        input_textbox = gr.Textbox(label='📛 이름을 입력하세요.')\n",
     "        output_textbox = gr.Textbox(label='🖐️ 어서오세요!', interactive=False)\n",
-    "    send_button = gr.Button('전송')\n",
+    "    send_button = gr.Button('전송', variant='primary')\n",
     "    send_button.click(fn=greet, inputs=input_textbox, outputs=output_textbox)\n",
     "    \n",
     "    gr.Markdown('## 이번엔 이름을 입력하기만 해도?')\n",
